--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,21 @@ header {
     transition: background 0.25s ease;
 }
 
+#profile a.highlight-tutor {
+    color: black;
+    cursor: pointer;
+    text-decoration: underline;
+    background: linear-gradient(to right, #c59bef 50%, transparent 50%);
+    background-size: 205% 100%;
+    background-position: right bottom;
+    transition: background 0.25s ease;
+}
+#profile a.highlight-tutor:hover {
+    /* background-color: #FAFE00; */
+    background-position: left bottom;
+    transition: background 0.25s ease;
+}
+
 #profile a.highlight-email {
     color: black;
     cursor: pointer;
