--- a/css/styles.css
+++ b/css/styles.css
@@ -526,7 +526,7 @@ header {
 
 .author {
     font-family: 'departure_monoregular', monospace;
-    font-size: 0.75em;
+    font-size: small;
     line-height: 1.4em;
     padding: 20px 16px 40px 16px;
     border-bottom: 1px solid #444;
@@ -702,6 +702,7 @@ body.alt-mode #divider{
 .alternate-divider{
     display:none;
 }
+
 
 /*Visible 1984 Alt Mode Elements */
 
