--- a/css/styles.css
+++ b/css/styles.css
@@ -552,25 +552,6 @@ footer {
     /*    border:solid 1px red;*/
 }
 
-/*DAILY QUOTES*/
-/*
-.say {
-    display: block;
-}
-.say img {
-    padding: 20px 30px 20px 0;
-    border-right: solid 1px #444;
-    float: left;
-}
-
-.say p {
-    font-family: 'departure_monoregular', monospace;
-    font-size: 0.75em;
-    line-height: 1.4em;
-    float: left;
-    padding: 10px 0 0 20px;
-}
-*/
 
 .copyright {
     display: block;
@@ -1078,7 +1059,7 @@ body.alt-mode .footer-ticker p{
     font-size:1em;
     border: solid 1px #000;
     padding:12px 5px !important;
-    width:50%;
+/*    width:50%;*/
     margin:12px auto;
     text-transform: capitalize;
 }
