--- a/css/styles.css
+++ b/css/styles.css
@@ -1028,6 +1028,7 @@ body.alt-mode::-webkit-scrollbar-button:single-button:increment {
   display: flex;
   align-items: center;
   justify-content:center;
+    text-align:center;
     flex-direction: column;
   gap: 15px;
   margin: 45px 0 0 0;
@@ -1055,10 +1056,14 @@ body.alt-mode .footer-ticker p{
 }
 
 .footer-ticker-text p:first-child {
-  font-weight: bold;
+  flex-shrink: 0; /* Prevent shrinking */
+  white-space: nowrap; /* Prevent wrapping */
+  width: auto; /* Adjust width automatically */
+  
+    font-weight: bold;
     font-size:1em;
     border: solid 1px #000;
-    padding:12px 5px !important;
+    padding:12px 30px !important;
 /*    width:50%;*/
     margin:12px auto;
     text-transform: capitalize;
@@ -1067,7 +1072,7 @@ body.alt-mode .footer-ticker p{
 /*adds typographers quotes around quotation.*/
 .footer-ticker-text p:last-child {
   font-style: italic; /* Optional: Italicize the quote for emphasis */
-  margin-top: 5px; /* Add spacing between lines */
+  margin-top: 20px; /* Add spacing between lines */
   quotes: "💬 “" "”"; /* Define custom quotes for browsers that support it */
 }
 
