--- a/css/styles.css
+++ b/css/styles.css
@@ -1064,7 +1064,7 @@ body.alt-mode .footer-ticker p{
     font-size:1em;
     border: solid 1px #000;
     padding:12px 30px !important;
-/*    width:50%;*/
+    width:80%;
     margin:12px auto;
     text-transform: capitalize;
 }
