--- a/css/styles.css
+++ b/css/styles.css
@@ -1031,7 +1031,8 @@ body.alt-mode::-webkit-scrollbar-button:single-button:increment {
     text-align:center;
     flex-direction: column;
   gap: 15px;
-  margin: 45px 0 0 0;
+    width:50%;
+  margin: 45px auto;
 /*    padding:30px 0 20px 0;*/
 }
 
@@ -1045,14 +1046,14 @@ body.alt-mode::-webkit-scrollbar-button:single-button:increment {
 .footer-ticker-text p {
   margin: 10px;
   font-size: .75rem;
-  line-height: 1.1em;
+  line-height: 1.5em;
   text-align: center;
   color: #000; /* Text color */
   font-family: 'departure_monoregular', monospace;
 }
 
 body.alt-mode .footer-ticker p{
-    font-size:1em !important;
+    font-size:.75rem !important;
 }
 
 .footer-ticker-text p:first-child {
@@ -1064,7 +1065,8 @@ body.alt-mode .footer-ticker p{
     font-size:1em;
     border: solid 1px #000;
     padding:12px 30px !important;
-    width:70%;
+    max-width:60%;
+    min-width: 60%;
     margin:12px auto;
     text-transform: capitalize;
 }
